feat: add new tests